Don't try to set value unless scrollbar exists.

Mouse or key events can be sent before the scrollbars are setup properly.

BUG: 407829
FIXED-IN:1.8.2